# DasEfxUltima

./: .githubworkflowsbuild.yml  CMakeLists.txt  README.md  installer.iss
.github/workflows/: build.yml
JUCE/: CMakeLists.txt
Juce/: CMakeLists.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ZDFFilter.h
workflows/: build.yml
